FIX: Fix width issues on mobile view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@
 
 body {
     font-family: "Alegreya",sans-serif;
-    min-width: 360px;
+    min-width: 420px;
 }
 
 .section-heading {
